Generate jar file in `bin` folder and call it from `bin/nrjmx`

--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,24 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+        <groupId>com.coderplus.maven.plugins</groupId>
+        <artifactId>copy-rename-maven-plugin</artifactId>
+        <version>1.0</version>
+        <executions>
+          <execution>
+            <id>copy-file</id>
+            <phase>package</phase>
+            <goals>
+              <goal>copy</goal>
+            </goals>
+            <configuration>
+              <sourceFile>target/${project.artifactId}-${project.version}-jar-with-dependencies.jar</sourceFile>
+              <destinationFile>bin/nrjmx.jar</destinationFile>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
       <!-- RPM definitions for NR-JMX tool -->
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
