Allow disabling RPM and DEB packaging

--- a/pom.xml
+++ b/pom.xml
@@ -77,123 +77,146 @@
           </execution>
         </executions>
       </plugin>
-      <!-- RPM definitions for NR-JMX tool -->
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>rpm-maven-plugin</artifactId>
-        <version>2.1.5</version>
-        <executions>
-          <execution>
-            <phase>package</phase>
-            <goals>
-              <goal>rpm</goal>
-            </goals>
-          </execution>
-        </executions>
-        <configuration>
-          <license>https://newrelic.com/terms (also see LICENSE installed with this package)</license>
-          <packager>New Relic Infrastructure Team &lt;infrastructure-eng@newrelic.com&gt;</packager>
-          <group>Application/System</group>
-          <sourceEncoding>utf-8</sourceEncoding>
-          <targetOS>x86_64-linux</targetOS>
-          <needarch>x86_64</needarch>
-          <mappings>
-            <mapping>
-              <directory>/usr/lib/${project.artifactId}</directory>
-              <sources>
-                <source>
-                  <location>target/${project.artifactId}-${project.version}-jar-with-dependencies.jar</location>
-                </source>
-                <softlinkSource>
-                  <location>/usr/lib/${project.artifactId}/${project.artifactId}-${project.version}-jar-with-dependencies.jar</location>
-                  <destination>${project.artifactId}.jar</destination>
-                </softlinkSource>
-              </sources>
-            </mapping>
-            <mapping>
-              <directory>/usr/bin</directory>
-              <username>root</username>
-              <groupname>root</groupname>
-              <configuration>false</configuration>
-              <directoryIncluded>false</directoryIncluded>
-              <filemode>755</filemode>
-              <sources>
-                <source>
-                  <location>bin/nrjmx</location>
-                </source>
-              </sources>
-            </mapping>
-            <mapping>
-              <directory>/usr/share/doc/${project.artifactId}</directory>
-              <documentation>true</documentation>
-              <username>root</username>
-              <groupname>root</groupname>
-              <!-- <filemode>444</filemode> -->
-              <sources>
-                <source>
-                  <location>README.md</location>
-                </source>
-                <source>
-                  <location>LICENSE</location>
-                </source>
-              </sources>
-            </mapping>
-          </mappings>
-        </configuration>
-      </plugin>
-      <!-- DEB definitions for NR-JMX -->
-      <plugin>
-        <artifactId>jdeb</artifactId>
-        <groupId>org.vafer</groupId>
-        <version>1.5</version>
-        <executions>
-          <execution>
-            <phase>package</phase>
-            <goals>
-              <goal>jdeb</goal>
-            </goals>
-          </execution>
-        </executions>
-        <configuration>
-          <dataSet>
-            <data>
-              <type>file</type>
-              <src>target/${project.artifactId}-${project.version}-jar-with-dependencies.jar</src>
-              <dst>/usr/lib/${project.artifactId}/${project.artifactId}-${project.version}-jar-with-dependencies.jar</dst>
-            </data>
-            <data>
-              <type>link</type>
-              <linkName>/usr/lib/${project.artifactId}/${project.artifactId}.jar</linkName>
-              <linkTarget>/usr/lib/${project.artifactId}/${project.artifactId}-${project.version}-jar-with-dependencies.jar</linkTarget>
-              <symlink>true</symlink>
-            </data>
-            <data>
-              <type>file</type>
-              <src>bin/${project.artifactId}</src>
-              <dst>/usr/bin/${project.artifactId}</dst>
-              <mapper>
-                <type>perm</type>
-                <filemode>755</filemode>
-              </mapper>
-            </data>
-            <data>
-              <type>file</type>
-              <src>README.md</src>
-              <dst>/usr/share/doc/${project.artifactId}/README</dst>
-            </data>
-            <data>
-              <type>file</type>
-              <src>LICENSE</src>
-              <dst>/usr/share/doc/${project.artifactId}/LICENSE</dst>
-            </data>
-          </dataSet>
-        </configuration>
-      </plugin>
     </plugins>
   </build>
+  <profiles>
+    <profile>
+      <id>deb</id>
+      <activation>
+        <activeByDefault>true</activeByDefault>
+      </activation>
+      <build>
+        <plugins>
+          <!-- DEB definitions for NR-JMX -->
+          <plugin>
+            <artifactId>jdeb</artifactId>
+            <groupId>org.vafer</groupId>
+            <version>1.5</version>
+            <executions>
+              <execution>
+                <phase>package</phase>
+                <goals>
+                  <goal>jdeb</goal>
+                </goals>
+              </execution>
+            </executions>
+            <configuration>
+              <dataSet>
+                <data>
+                  <type>file</type>
+                  <src>target/${project.artifactId}-${project.version}-jar-with-dependencies.jar</src>
+                  <dst>/usr/lib/${project.artifactId}/${project.artifactId}-${project.version}-jar-with-dependencies.jar</dst>
+                </data>
+                <data>
+                  <type>link</type>
+                  <linkName>/usr/lib/${project.artifactId}/${project.artifactId}.jar</linkName>
+                  <linkTarget>/usr/lib/${project.artifactId}/${project.artifactId}-${project.version}-jar-with-dependencies.jar</linkTarget>
+                  <symlink>true</symlink>
+                </data>
+                <data>
+                  <type>file</type>
+                  <src>bin/${project.artifactId}</src>
+                  <dst>/usr/bin/${project.artifactId}</dst>
+                  <mapper>
+                    <type>perm</type>
+                    <filemode>755</filemode>
+                  </mapper>
+                </data>
+                <data>
+                  <type>file</type>
+                  <src>README.md</src>
+                  <dst>/usr/share/doc/${project.artifactId}/README</dst>
+                </data>
+                <data>
+                  <type>file</type>
+                  <src>LICENSE</src>
+                  <dst>/usr/share/doc/${project.artifactId}/LICENSE</dst>
+                </data>
+              </dataSet>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>rpm</id>
+      <activation>
+          <activeByDefault>true</activeByDefault>
+      </activation>
+      <build>
+        <plugins>
+            <!-- RPM definitions for NR-JMX tool -->
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>rpm-maven-plugin</artifactId>
+                <version>2.1.5</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>rpm</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <license>https://newrelic.com/terms (also see LICENSE installed with this package)</license>
+                    <packager>New Relic Infrastructure Team &lt;infrastructure-eng@newrelic.com&gt;</packager>
+                    <group>Application/System</group>
+                    <sourceEncoding>utf-8</sourceEncoding>
+                    <targetOS>x86_64-linux</targetOS>
+                    <needarch>x86_64</needarch>
+                    <mappings>
+                        <mapping>
+                            <directory>/usr/lib/${project.artifactId}</directory>
+                            <sources>
+                                <source>
+                                    <location>target/${project.artifactId}-${project.version}-jar-with-dependencies.jar</location>
+                                </source>
+                                <softlinkSource>
+                                    <location>/usr/lib/${project.artifactId}/${project.artifactId}-${project.version}-jar-with-dependencies.jar</location>
+                                    <destination>${project.artifactId}.jar</destination>
+                                </softlinkSource>
+                            </sources>
+                        </mapping>
+                        <mapping>
+                            <directory>/usr/bin</directory>
+                            <username>root</username>
+                            <groupname>root</groupname>
+                            <configuration>false</configuration>
+                            <directoryIncluded>false</directoryIncluded>
+                            <filemode>755</filemode>
+                            <sources>
+                                <source>
+                                    <location>bin/nrjmx</location>
+                                </source>
+                            </sources>
+                        </mapping>
+                        <mapping>
+                            <directory>/usr/share/doc/${project.artifactId}</directory>
+                            <documentation>true</documentation>
+                            <username>root</username>
+                            <groupname>root</groupname>
+                            <!-- <filemode>444</filemode> -->
+                            <sources>
+                                <source>
+                                    <location>README.md</location>
+                                </source>
+                                <source>
+                                    <location>LICENSE</location>
+                                </source>
+                            </sources>
+                        </mapping>
+                    </mappings>
+                </configuration>
+            </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
   <properties>
     <maven.compiler.source>1.7</maven.compiler.source>
     <maven.compiler.target>1.7</maven.compiler.target>
     <maven.compiler.compilerVersion>1.7</maven.compiler.compilerVersion>
   </properties>
+
 </project>
