--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,12 @@
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
+
+#IDEA artifacts
 .idea/
+.classpath
+.settings
+.project
 
 # Package Files #
 *.jar
