--- a/.gitignore
+++ b/.gitignore
@@ -4,10 +4,13 @@
 .mtj.tmp/
 
 #IDEA artifacts
-.idea
+**/.idea
 .classpath
 .settings
 .project
+**/*.iml
+**/*.iws
+**/*.ipr
 
 # Package Files #
 *.jar
@@ -16,4 +19,4 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
-/target/
+**/target
