--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,18 @@
             <artifactId>gson</artifactId>
             <version>2.8.0</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>testcontainers</artifactId>
+            <version>1.11.3</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
@@ -77,30 +89,29 @@
     <profiles>
         <profile>
             <id>test</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
             <build>
                 <plugins>
                     <!-- before testing, it builds the test-server project -->
                     <plugin>
-                        <groupId>org.codehaus.mojo</groupId>
-                        <artifactId>exec-maven-plugin</artifactId>
-                        <version>1.1</version>
+                        <groupId>com.spotify</groupId>
+                        <artifactId>dockerfile-maven-plugin</artifactId>
+                        <version>1.4.10</version>
+                        <configuration>
+                            <contextDirectory>${project.basedir}/test-server</contextDirectory>
+                            <repository>testserver</repository>
+                        </configuration>
                         <executions>
                             <execution>
                                 <id>Build test server</id>
                                 <phase>test</phase>
                                 <goals>
-                                    <goal>exec</goal>
+                                    <goal>build</goal>
                                 </goals>
                             </execution>
                         </executions>
-                        <configuration>
-                            <executable>mvn</executable>
-                            <basedir>test-server</basedir>
-                            <arguments>
-                                <argument>clean</argument>
-                                <argument>package</argument>
-                            </arguments>
-                        </configuration>
                     </plugin>
                 </plugins>
             </build>
