--- a/test-server/Dockerfile
+++ b/test-server/Dockerfile
@@ -1,10 +1,17 @@
+FROM maven:3.6-jdk-8 as builder
+
+ADD . .
+
+RUN mvn package
+RUN pwd
+
 FROM openjdk:8-jre
 
 EXPOSE 4567
 EXPOSE 7199
 
-ADD target/test-server.jar /
-ADD servertruststore /
-ADD serverkeystore /
+COPY --from=builder target/test-server.jar /
+COPY --from=builder servertruststore /
+COPY --from=builder serverkeystore /
 
 ENTRYPOINT exec java $JAVA_OPTS -jar /test-server.jar
