--- a/pom.xml
+++ b/pom.xml
@@ -127,6 +127,33 @@
             </build>
         </profile>
         <profile>
+            <id>tarball</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-assembly-plugin</artifactId>
+                        <configuration>
+                            <finalName>nrjmx_${project.version}-1_amd64</finalName>
+                            <appendAssemblyId>false</appendAssemblyId>
+                            <descriptor>assembly.xml</descriptor>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>create-archive</id>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>single</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
             <id>deb</id>
             <activation>
                 <activeByDefault>true</activeByDefault>
