--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,7 @@
         <plugins>
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
+                <version>2.2.2</version>
                 <configuration>
                     <archive>
                         <manifest>
