--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>nrjmx</groupId>
     <artifactId>nrjmx</artifactId>
-    <version>1.5.1</version>
+    <version>1.4.2</version>
     <name>nrjmx</name>
     <description>The New Relic JMX tool provides a command line tool to connect to a JMX server and retrieve the MBeans
         it exposes.
@@ -93,7 +93,7 @@
         <profile>
             <id>test</id>
             <activation>
-                <activeByDefault>true</activeByDefault>
+                <activeByDefault>false</activeByDefault>
             </activation>
             <build>
                 <plugins>
