--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 **/*.iml
 **/*.iws
 **/*.ipr
+out/
 
 # Package Files #
 *.jar
@@ -20,3 +21,7 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 **/target
+
+# Gradle
+.gradle
+build/
