--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,4 @@
 group=nrjmx
 version=1.6.0-SNAPSHOT
-description=nrjmx
+description=The New Relic JMX tool provides a command line tool to connect to a JMX server and retrieve the MBeans
+it exposes
