Set target compatibility to JDK11

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,3 @@
 group=nrjmx
 version=1.6.0-SNAPSHOT
-description=The New Relic JMX tool provides a command line tool to connect to a JMX server and retrieve the MBeans
-it exposes
+description=The New Relic JMX tool provides a command line tool to connect to a JMX server and retrieve the MBeans it exposes
