--- a/.gitignore
+++ b/.gitignore
@@ -11,12 +11,18 @@
 **/*.iml
 **/*.iws
 **/*.ipr
+out/
 
 # Package Files #
 *.jar
+!gradle/wrapper/*.jar
 *.war
 *.ear
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 **/target
+
+# Gradle
+.gradle
+build/
