--- a/.github/workflows/push_pr.yml
+++ b/.github/workflows/push_pr.yml
@@ -1,17 +1,36 @@
 ---
-name: Java CI - PR
+name: Push/PR pipeline
 
-on: [ pull_request ]
+on:
+  push:
+    branches:
+      - '**'
+    tags-ignore:
+      - '**'
 
 env:
+  GPG_MAIL: 'infrastructure-eng@newrelic.com' # info@newrelic.com
+  GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
+  GPG_PRIVATE_KEY_BASE64: ${{ secrets.GPG_PRIVATE_KEY_BASE64 }} # base64 encoded
   SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
 
 jobs:
 
   test:
-    runs-on: ubuntu-20.04
+    name: Run tests
+    runs-on: ubuntu-18.04
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Restore gradle cache
+        uses: actions/cache@v2
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
       - name: Set up JDK 11
         uses: actions/setup-java@v1
         with:
@@ -21,17 +40,17 @@ jobs:
         run: ./gradlew build --info --stacktrace
       - name: Package with Gradle
         run: ./gradlew package --warn --stacktrace
-      - name: Push bin to GH workflow artifacts cache
-        uses: actions/upload-artifact@v2
-        with:
-          name: dist-linux
-          path: build/distributions
+      - name: Install debsigs
+        run: sudo apt-get install -y debsigs
+      - name: Sign packages
+        run: ./script/sign.sh
 
   snyk:
     name: Run security checks via snyk
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-18.04
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
       - name: Run Snyk to check for vulnerabilities
         uses: snyk/actions/gradle-jdk11@master
         env:
