--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
 group=nrjmx
-version=1.6.1-SNAPSHOT
+version=1.6.1
 description=The New Relic JMX tool provides a command line tool to connect to a JMX server and retrieve the MBeans it exposes
 jmxTermVersion=1.0.2
