--- a/.github/workflows/push_pr.yml
+++ b/.github/workflows/push_pr.yml
@@ -37,9 +37,9 @@ jobs:
           java-version: '11'
           java-package: jdk
       - name: Build with Gradle
-        run: ./gradlew build --info --stacktrace
+        run: make build
       - name: Package with Gradle
-        run: ./gradlew package --warn --stacktrace
+        run: make package
       - name: Install debsigs
         run: sudo apt-get install -y debsigs
       - name: Sign packages
