--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,39 @@
         <url>https://newrelic.com/infrastructure/</url>
     </organization>
     <dependencies>
+
+        <!-- https://mvnrepository.com/artifact/io.grpc/grpc-protobuf -->
+        <dependency>
+            <groupId>io.grpc</groupId>
+            <artifactId>grpc-protobuf</artifactId>
+            <version>1.38.0</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/io.grpc/grpc-stub -->
+        <dependency>
+            <groupId>io.grpc</groupId>
+            <artifactId>grpc-stub</artifactId>
+            <version>1.38.0</version>
+        </dependency>
+
+
+        <!-- https://mvnrepository.com/artifact/io.grpc/grpc-netty -->
+        <dependency>
+            <groupId>io.grpc</groupId>
+            <artifactId>grpc-netty</artifactId>
+            <version>1.38.0</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/io.grpc/grpc-testing -->
+        <dependency>
+            <groupId>io.grpc</groupId>
+            <artifactId>grpc-testing</artifactId>
+            <version>1.38.0</version>
+            <scope>test</scope>
+        </dependency>
+
+
+
         <dependency>
             <groupId>commons-cli</groupId>
             <artifactId>commons-cli</artifactId>
@@ -36,6 +69,11 @@
             <version>1.11.3</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.thrift</groupId>
+            <artifactId>libthrift</artifactId>
+            <version>0.14.2</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
@@ -45,7 +83,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>org.newrelic.nrjmx.Application</mainClass>
+                            <mainClass>org.newrelic.nrjmx.v2.Application</mainClass>
                         </manifest>
                     </archive>
                     <descriptorRefs>
