--- a/.github/workflows/prerelease_linux.yml
+++ b/.github/workflows/prerelease_linux.yml
@@ -21,25 +21,25 @@ env:
   AWS_REGION: "us-east-1"
 
 jobs:
-  unit-test-linux:
-    name: Linux unit tests
-    runs-on: ubuntu-20.04
-
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Install Go
-        uses: actions/setup-go@v2
-        with:
-          go-version: ${{env.GO_VERSION}}
-
-      - name: Running unit tests
-        run: make ci/test
+#  unit-test-linux:
+#    name: Linux unit tests
+#    runs-on: ubuntu-20.04
+#
+#    steps:
+#      - uses: actions/checkout@v2
+#
+#      - name: Install Go
+#        uses: actions/setup-go@v2
+#        with:
+#          go-version: ${{env.GO_VERSION}}
+#
+#      - name: Running unit tests
+#        run: make ci/test
 
   packaging-linux:
     name: Build and upload all artifacts into GH Release assets
     runs-on: ubuntu-20.04
-    needs: [unit-test-linux]
+#    needs: [unit-test-linux]
 
     steps:
       - uses: actions/checkout@v2
