ci: fixed pkg version

--- a/src/deb/control/control
+++ b/src/deb/control/control
@@ -2,6 +2,6 @@ Package: [[name]]
 Version: [[version]]
 Section: misc
 Priority: low
-Architecture: all
+Architecture: -1_amd64
 Maintainer: New Relic Infrastructure Team <infrastructure-eng@newrelic.com>
 Description:New Relic JMX tool. [[description]]
