--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -36,22 +36,49 @@ jobs:
 #      - name: Running unit tests
 #        run: make ci/test
 
-  packaging-linux:
-    name: Build and upload all artifacts into GH Release assets
-    runs-on: ubuntu-20.04
-#    needs: [unit-test-linux]
+#  packaging-linux:
+#    name: Build and upload all artifacts into GH Release assets
+#    runs-on: ubuntu-20.04
+##    needs: [unit-test-linux]
+#
+#    steps:
+#      - uses: actions/checkout@v2
+#
+#      - name: Login to DockerHub
+#        uses: docker/login-action@v1
+#        with:
+#          username: ${{ env.DOCKER_HUB_ID }}
+#          password: ${{ env.DOCKER_HUB_PASSWORD }}
+#
+#      - name: Releasing linux packages
+#        run: make ci/release
+
+  packaging-Windows:
+    name: Windows MSI build
+    runs-on: windows-latest
+#    needs: [ packaging-linux ]
 
     steps:
       - uses: actions/checkout@v2
-
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
           username: ${{ env.DOCKER_HUB_ID }}
           password: ${{ env.DOCKER_HUB_PASSWORD }}
 
-      - name: Releasing linux packages
-        run: make ci/release
+    uses: dsaltares/fetch-gh-release-asset@master
+    with:
+      repo: "newrelic/nrjmx"
+      version: "tags/v1.7.0"
+      file: "nrjmx_linux_${{env.TAG:1}}_noarch.tar.gz"
+      target: "nrjmx_linux_${{env.TAG:1}}_noarch.zip"
+      token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Running unit tests
+      run: ./win_build.ps1
+
+#      - name: Upload MSI to GH
+#        shell: bash
+#        run: build/upload_artifacts_gh.sh
 
 #  publishing-to-s3:
 #    name: Publish linux artifacts into s3 staging bucket
