--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -66,16 +66,17 @@ jobs:
           username: ${{ env.DOCKER_HUB_ID }}
           password: ${{ env.DOCKER_HUB_PASSWORD }}
 
-    uses: dsaltares/fetch-gh-release-asset@master
-    with:
-      repo: "newrelic/nrjmx"
-      version: "tags/v1.7.0"
-      file: "nrjmx_linux_${{env.TAG:1}}_noarch.tar.gz"
-      target: "nrjmx_linux_${{env.TAG:1}}_noarch.zip"
-      token: ${{ secrets.GITHUB_TOKEN }}
-      
-    - name: Running unit tests
-      run: ./win_build.ps1
+      - name: Download artifact
+        uses: dsaltares/fetch-gh-release-asset@master
+        with:
+          repo: "newrelic/nrjmx"
+          version: "tags/v1.7.0"
+          file: "nrjmx_linux_${{env.TAG:1}}_noarch.tar.gz"
+          target: "nrjmx_linux_${{env.TAG:1}}_noarch.zip"
+          token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Running unit tests
+        run: ./win_build.ps1
 
 #      - name: Upload MSI to GH
 #        shell: bash
