--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -66,13 +66,19 @@ jobs:
           username: ${{ env.DOCKER_HUB_ID }}
           password: ${{ env.DOCKER_HUB_PASSWORD }}
 
+      - id: get-artifact-name
+        run: |
+          id=$(echo ${{github.event.client_payload.value}} | cut -d- -f2)
+          id="nrjmx_linux_$id_noarch.tar.gz"
+          echo "::set-output name=id::$id"
+
       - name: Download artifact
         uses: dsaltares/fetch-gh-release-asset@master
         with:
           repo: "newrelic/nrjmx"
           version: "tags/v1.7.0"
-          file: "nrjmx_linux_${{env.TAG:1}}_noarch.tar.gz"
-          target: "nrjmx_linux_${{env.TAG:1}}_noarch.zip"
+          file: ${{steps.get-id.outputs.id}}
+          target: ${{steps.get-id.outputs.id}}
           token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Running unit tests
