--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -68,7 +68,7 @@ jobs:
 
       - id: get-artifact-name
         run: |
-          $id=$(echo ${{github.event.client_payload.value}} | % { $_.Substring(1) })
+          $id=$(echo ${{ env.TAG }} | % { $_.Substring(1) })
           $id="nrjmx_linux_$id_noarch.tar.gz"
           echo "::set-output name=id::$id"
 
