ci: added zip assembly

--- a/pom.xml
+++ b/pom.xml
@@ -151,14 +151,26 @@
                     </plugin>
                     <plugin>
                         <artifactId>maven-assembly-plugin</artifactId>
-                        <configuration>
-                            <finalName>${project.artifactId}_linux_${project.version}_noarch</finalName>
-                            <appendAssemblyId>false</appendAssemblyId>
-                            <descriptor>assembly.xml</descriptor>
-                        </configuration>
                         <executions>
                             <execution>
                                 <id>create-archive</id>
+                                <configuration>
+                                    <finalName>${project.artifactId}_linux_${project.version}_noarch</finalName>
+                                    <appendAssemblyId>false</appendAssemblyId>
+                                    <descriptor>assembly.xml</descriptor>
+                                </configuration>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>single</goal>
+                                </goals>
+                            </execution>
+                            <execution>
+                                <id>create-archive-zip</id>
+                                <configuration>
+                                    <finalName>${project.artifactId}_windows_${project.version}_noarch</finalName>
+                                    <appendAssemblyId>false</appendAssemblyId>
+                                    <descriptor>assembly-zip.xml</descriptor>
+                                </configuration>
                                 <phase>package</phase>
                                 <goals>
                                     <goal>single</goal>
